<resources>
    <string name="app_name">Poke Companion</string>
    <string name="title_activity_individual__pokemon_view">Individual_Pokemon_view</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="instruction_display">Input Your Pokemon\'s IVs</string>
    <string name="attack_display">Attack</string>
    <string name="hp_display">HP</string>
    <string name="defense_display">Defense</string>
    <string name="speed_display">Speed</string>
    <string name="sp_attack_display">Sp. Attack</string>
    <string name="sp_defense_display">Sp. Defense</string>
    <string name="button_text_display">Give me an average!</string>
    <string name="inst_display_foot">Individual Values can be 0–31</string>
    <string name="to_individual_view_button">To individual view</string>
    <string name="title_activity_team_starter">teamStarter</string>
    <string name="defense">Defense</string>
    <string name="s_attack">S. Attack</string>
    <string name="s_defense">S. Defense</string>
    <string name="speed">Speed</string>
    <string name="calculate_stats">Calculate Stats</string>
    <string name="base_atk_val">-</string>
    <string name="base_satk_val">-</string>
    <string name="base_hp_val">-</string>
    <string name="base_spd_val">-</string>
    <string name="base_def_val">-</string>
    <string name="base_sdef_val">-</string>
    <string name="iv_atk_val">-</string>
    <string name="iv_satk_val">-</string>
    <string name="iv_hp_val">-</string>
    <string name="iv_spd_val">-</string>
    <string name="iv_def_val">-</string>
    <string name="iv_sdef_val">-</string>
    <string name="health">Health</string>
    <string name="attack">Attack</string>
    <string name="IV">IV</string>
    <string name="pokemon_display_name">Growlithe</string>
    <string name="mew">Mew</string>
    <string name="charizard">Charizard</string>
    <string name="staryu">Staryu</string>
    <string name="growlithe">Growlithe</string>

    <!--Some strings for the RSS/Newsfeed-->
    <string name="to_rss_view_button">Newsfeed</string>
    <string name="feed_source">Feed source</string>
    <string name="fetch_url">LOAD</string>
    <string name="feed_title">Title:</string>
    <string name="feed_description">Description:</string>
    <string name="feed_link">Link:</string>
    <string name="feed_url">https://pokemondb.net/news/feed</string>
    <string name="title_activity_rss_view">RSS_view</string>
    <string name="title_activity_rss_browser_view">RSSActivityBrowser</string>
    <!--<string name="textInputLayout">textInputLayout</string>-->

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_team_builder">team_builder</string>

    <string-array name = "natures_array">
        <item>Hardy</item>
        <item>Lonely</item>
        <item>Brave</item>
        <item>Adamant</item>
        <item>Naughty</item>
        <item>Bold</item>
        <item>Docile</item>
        <item>Relaxed</item>
        <item>Impish</item>
        <item>Lax</item>
        <item>Timid</item>
        <item>Hasty</item>
        <item>Serious</item>
        <item>Jolly</item>
        <item>Naive</item>
        <item>Modest</item>
        <item>Mild</item>
        <item>Quiet</item>
        <item>Bashful</item>
        <item>Rash</item>
        <item>Calm</item>
        <item>Gentle</item>
        <item>Sassy</item>
        <item>Careful</item>
        <item>Quirky</item>
    </string-array>

</resources>